SLP: fix SVE issues

The patch fixes the following 2 issues:

  .MASK_STORE_LANES (&a, 4B, max_mask_34, vect_array.12);

here we miss to return the last argument as stored value.

ivtmp_32 = ivtmp_31 + POLY_INT_CST [4, 4];

here we miss a bail out in vect_recog_over_widening_pattern.

gcc/ChangeLog:

	PR tree-optimization/97079
	* internal-fn.c (internal_fn_stored_value_index): Handle also
	.MASK_STORE_LANES.
	* tree-vect-patterns.c (vect_recog_over_widening_pattern): Bail
	out for unsupported TREE_TYPE.

gcc/testsuite/ChangeLog:

	PR tree-optimization/97079
	* gcc.target/aarch64/sve/pr97079.c: New test.